tests/snapshots/snapshot_tests__array_init_disj_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_disj_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a_next i_next i) i_next) i)",
        "(= (Read-Int-Int (Write-Int-Int a i N) i) N)",
        "(= (Read-Int-Int (Write-Int-Int a Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int a i N) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int a_next N i) N) (Read-Int-Int a_next N))",
        "(= (Read-Int-Int (Write-Int-Int a_next N i) N) i)",
        "(= (Read-Int-Int (Write-Int-Int a i i) N) (Read-Int-Int a N))",
        "(= (Read-Int-Int (Write-Int-Int a Z N) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) (Read-Int-Int a_next Z))",
    ],
}
