tests/snapshots/snapshot_tests__array_init_double.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_double.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int b i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int b_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int b i i) i) (Read-Int-Int b i))",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z i_next) Z) i_next)",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) i_next) (Read-Int-Int b i_next))",
        "(= (Read-Int-Int (Write-Int-Int b i N) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z N) Z) N)",
    ],
}
