tests/snapshots/snapshot_tests__array_init_increm_twice_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_increm_twice_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i (+ (Read-Int-Int a i) Z)) i) (+ (Read-Int-Int a i) Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z (+ (Read-Int-Int a Z) Z)) Z) (+ (Read-Int-Int a Z) Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z 10077) Z) 10077)",
        "(= (Read-Int-Int (Write-Int-Int a N (+ (Read-Int-Int a N) Z)) N) (+ (Read-Int-Int a N) Z))",
        "(= (Read-Int-Int (Write-Int-Int a N (+ (Read-Int-Int a N) Z)) N) (Read-Int-Int a N))",
    ],
}
