tests/snapshots/snapshot_tests__array_init_var_plus_ind2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_var_plus_ind2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i k) i) k)",
        "(= (Read-Int-Int (Write-Int-Int a Z k) Z) k)",
        "(= (Read-Int-Int (Write-Int-Int a Z k_next) Z) k_next)",
        "(= (Read-Int-Int (Write-Int-Int a k_next k_next) k_next) k_next)",
        "(= (Read-Int-Int (Write-Int-Int a i k) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int a Z k_next) Z) (Read-Int-Int a Z))",
    ],
}
