tests/snapshots/snapshot_tests__array_two_counters_replace.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_two_counters_replace.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i 5) i) 5)",
        "(= (Read-Int-Int (Write-Int-Int a i 3) i) 3)",
        "(= (Read-Int-Int (Write-Int-Int a1 i_next 3) i_next) 3)",
        "(= (Read-Int-Int (Write-Int-Int a1 N 3) N) 3)",
        "(= (Read-Int-Int (Write-Int-Int a1_next i 3) i) 3)",
        "(= (Read-Int-Int (Write-Int-Int a i (Read-Int-Int a1 i)) i) (Read-Int-Int a1 i))",
        "(= (Read-Int-Int (Write-Int-Int a1_next i 3) i_next) (Read-Int-Int a1_next i_next))",
        "(= (Read-Int-Int (Write-Int-Int a N 3) N) 3)",
        "(= (Read-Int-Int (Write-Int-Int a i 3) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int a_next i (Read-Int-Int a_next i)) i) (Read-Int-Int a_next i))",
        "(= (Read-Int-Int (Write-Int-Int a_next i 3) i) 3)",
        "(= (Read-Int-Int (Write-Int-Int a i_next 3) i_next) 3)",
        "(= (Read-Int-Int (Write-Int-Int a Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int a_next i N) i) N)",
        "(= (Read-Int-Int (Write-Int-Int a N N) N) N)",
        "(= (Read-Int-Int (Write-Int-Int a i (Read-Int-Int a i)) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int a Z (Read-Int-Int a Z)) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a1 Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int a i N) i) N)",
        "(= (Read-Int-Int (Write-Int-Int a i_next N) i_next) N)",
        "(= (Read-Int-Int (Write-Int-Int a Z N) i_next) (Read-Int-Int a i_next))",
        "(= (Read-Int-Int (Write-Int-Int a i 5) i) (Read-Int-Int a i))",
    ],
}
